--- a/src/test/Testdata/Testdata.properties
+++ b/src/test/Testdata/Testdata.properties
@@ -2,11 +2,11 @@ browser1= chrome
 browser2= firefox
 browser3= ie
 browser_url= http://localhost/colour
-emailid=abcdefg@gmail.com
-password=abc123
-emailaddress=abcdefg@gmail.com
-fullname=chiselon
-password=abc123
-confirmpassword=abc123
+emailid=lnv@gmail.com
+password=1234567
+emailaddress=lnv@gmail.com
+fullname=sureshbabu
+password=1234567
+confirmpassword=1234567
 logout_button=//a[text()='Log out']
 filepath=D:\Eclipse-1.0\ColourClassifieds\src\test\Testdata\Testdata.properties
